--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-h{
-    color: brown;
+dody{
+    h{
+        color: brown;
+    }
+    
+    p{
+        color: aqua;
+    }
+
+    background-color: antiquewhite;
 }
